Sun May 16 14:55:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (dln_find.o): fix dependency.

Sun May 16 13:55:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_loaderror): use locale string, not ascii-8bit.

Sun May 16 11:39:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/missing.h (signbit): add missing prototype.

Sun May 16 10:49:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): fix number of arguments.
	  a patch by Masaya TARUI <tarui AT prx.jp>.

Sun May 16 02:24:27 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: can not load libruby.so if gcc is used with
	  --enable-shared on AIX.

Sat May 15 17:16:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): raise BrokenLibrary if
	  errno is not set.  [ruby-dev:41317]

Fri May 14 07:27:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_float): strip ".0" from end for rubyspec.

Fri May 14 01:17:10 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_core.c (rb_thread_struct): add a field for sigaltstack.

	* thread_pthread.c (thread_start_func_1): initialize machine stack
	  information.

	* thread.c (thread_start_func_2): set sigaltstack for each sub thread.
	  [ruby-core:24540] [ruby-core:30207]

Thu May 13 21:40:39 2010  Tanaka Akira  <akr@fsij.org>

	* missing/ffs.c (ffs): fixed for non-zero values.

Thu May 13 18:45:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (get_write_fd): return primary fd if no
	  io is tied for writing.

Thu May 13 18:15:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (swallow): should use more_char() instead of fill_cbuf().
	  suggested by akr.

Thu May 13 17:56:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_set_echo, console_echo_p): use
	  primary fd.  [ruby-dev:41309]

Thu May 13 13:30:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
